--- a/css/styles.css
+++ b/css/styles.css
@@ -45,19 +45,62 @@ body {
   background: var(--very-dark-blue);
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 .component-container {
   display: grid;
   grid-template-columns: 50% 50%;
   width: 1200px;
-  text-align: center;
+  margin: 0 auto;
   justify-items: center;
   align-items: center;
   background: var(--dark-desaturated-blue);
+  margin-top: 5%;
+  border-radius: 15px;
 }
 
-.stats-columns{
+.column-left {
+  padding: 0 90px 0 80px;
+  text-align: left;
+}
+
+#main-paragraph {
+  color: var(--transparent-white-1);
+  line-height: 30px;
+}
+
+.stats-columns {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 50px;
+  margin-top: 40px;
+}
+
+.stats-element p {
+  line-height: 0;
+  font-size: 12px;
+  color: var(--transparent-white-1);
+}
+
+h1 {}
+
+strong {
+  color: var(--soft-violet);
+}
+
+.main-image {
+  margin-left: 70px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  filter: sepia(13%) saturate(3195%) hue-rotate(235deg) brightness(75%) contrast(70%);
+}
+
+.attribution {
+  margin-top: 20px;
+}
+
+.attribution a{
+  color: var(--soft-violet);
+  text-decoration: none;
 }
