--- a/css/styles.css
+++ b/css/styles.css
@@ -51,13 +51,17 @@ body {
 .component-container {
   display: grid;
   grid-template-columns: 50% 50%;
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
   justify-items: center;
   align-items: center;
   background: var(--dark-desaturated-blue);
   margin-top: 5%;
   border-radius: 15px;
+}
+
+.column-right-mobile{
+  display: none;
 }
 
 .column-left {
@@ -89,18 +93,65 @@ strong {
   color: var(--soft-violet);
 }
 
-.main-image {
+.main-image-large {
   margin-left: 70px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   filter: sepia(13%) saturate(3195%) hue-rotate(235deg) brightness(75%) contrast(70%);
 }
 
+.main-image-mobile {
+  display: none;
+}
+
 .attribution {
   margin-top: 20px;
 }
 
-.attribution a{
+.attribution a {
   color: var(--soft-violet);
   text-decoration: none;
+}
+
+@media screen and (max-width: 799px) {
+  .component-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    /* width: 100%; */
+    margin: 40px;
+    justify-items: center;
+    align-items: center;
+
+  }
+
+  .column-right-mobile{
+    display: block;
+  }
+
+  .column-left {
+    padding: 50px 60px 60px;
+    text-align: center;
+  }
+
+  .main-image-large {
+    display: none;
+  }
+
+  .main-image-mobile {
+    display: block;
+    /* border-top-right-radius: 15px; */
+    /* border-bottom-right-radius: 15px; */
+    filter: sepia(13%) saturate(3195%) hue-rotate(235deg) brightness(75%) contrast(70%);
+    width: 100%;
+  }
+
+  .stats-columns {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 20px;
+    margin-top: 40px;
+  }
+  .attribution{
+    margin-bottom: 40px;
+  }
 }
